applications/FemToDemApplication/examples/test.gid/test.err
error in .bat file: 
line: 14.- error: couldn't execute "D:\KratosInstall\runkratos": no such file or directory 

