applications/FemToDemApplication/examples/test.gid/test.mdpa

Begin Properties 0
End Properties

Begin Properties 1
// ELASTIC PROPERTIES
      YOUNG_MODULUS            3.0e7
      DENSITY                  2400
      POISSON_RATIO            0.2
      THICKNESS                1.0

// DAMAGE PARAMETERS
      YIELD_SURFACE            Rankine
      YIELD_STRESS_C           30e6
      YIELD_STRESS_T           1.5e6
      FRAC_ENERGY_T            1.5e5
      INTERNAL_FRICTION_ANGLE  32

// DYNAMIC PARAMETERS  D = alpha*M + beta*K
      RAYLEIGH_BETA            0.005
      RAYLEIGH_ALPHA           0.00
End Properties

Begin Properties 2
// ELASTIC PROPERTIES
      YOUNG_MODULUS            3.0e7
      DENSITY                  2400
      POISSON_RATIO            0.2
      THICKNESS                1.0

// DAMAGE PARAMETERS
      YIELD_SURFACE            ModifiedMohrCoulomb
      YIELD_STRESS_C           30e6
      YIELD_STRESS_T           1.5e6
      FRAC_ENERGY_T            1.5e5
      INTERNAL_FRICTION_ANGLE  32

// DYNAMIC PARAMETERS  D = alpha*M + beta*K
      RAYLEIGH_BETA            0.005
      RAYLEIGH_ALPHA           0.00
End Properties


Begin Nodes
  1    -4.2246800000    0.9651900000    0.0000000000
  2    -3.9905030000    0.6471520000    0.0000000000
  3    -3.8621947273    1.1392409091    0.0000000000
  4    -3.7433027965    0.8702098222    0.0000000000
  5    -3.7563260000    0.3291140000    0.0000000000
  6    -3.4997094545    1.3132918182    0.0000000000
  7    -3.5457475344    0.5339589853    0.0000000000
  8    -3.3408769630    0.9362448684    0.0000000000
  9    -3.1557970655    0.5370346152    0.0000000000
  10    -3.5221490000    0.0110760000    0.0000000000
  11    -3.1372241818    1.4873427273    0.0000000000
  12    -2.9634807449    0.8756312420    0.0000000000
  13    -3.0193524689    0.1324014104    0.0000000000
  14    -2.7729409038    1.2252510372    0.0000000000
  15    -2.7664258474    0.5418613527    0.0000000000
  16    -3.2879720000    -0.3069620000    0.0000000000
  17    -2.7747389091    1.6613936364    0.0000000000
  18    -2.5759093747    0.8710047260    0.0000000000
  19    -2.5702291604    0.2083435093    0.0000000000
  20    -2.8135417400    -0.1969450147    0.0000000000
  21    -2.4133513084    1.2308828545    0.0000000000
  22    -2.3795534937    0.5343066322    0.0000000000
  23    -3.0537950000    -0.6250000000    0.0000000000
  24    -2.4122536364    1.8354445455    0.0000000000
  25    -2.1861396750    0.8719100210    0.0000000000
  26    -2.1833280802    1.5502537254    0.0000000000
  27    -2.3815426625    -0.1320806839    0.0000000000
  28    -2.1811268360    0.1988247403    0.0000000000
  29    -2.5754004910    -0.4702625119    0.0000000000
  30    -1.9931312310    1.2099801849    0.0000000000
  31    -1.9904972201    0.5387976626    0.0000000000
  32    -2.8196180000    -0.9430380000    0.0000000000
  33    -2.0497683636    2.0094954545    0.0000000000
  34    -1.7968780071    0.8762745470    0.0000000000
  35    -1.9946879041    -0.1291998591    0.0000000000
  36    -2.1856002015    -0.4683808145    0.0000000000
  37    -1.7935532135    1.5442141001    0.0000000000
  38    -1.7922593934    0.2032063548    0.0000000000
  39    -2.3864238830    -0.8021219090    0.0000000000
  40    -1.6060565099    1.2030562462    0.0000000000
  41    -1.6014461186    0.5430740584    0.0000000000
  42    -2.5854410000    -1.2610760000    0.0000000000
  43    -1.5986532841    1.8793461609    0.0000000000
  44    -1.6872830909    2.1835463636    0.0000000000
  45    -1.8036247050    -0.4710317733    0.0000000000
  46    -1.4107332041    0.8658639882    0.0000000000
  47    -1.6055459181    -0.1355012624    0.0000000000
  48    -1.9969564244    -0.8074480677    0.0000000000
  49    -1.4129337718    1.5390407930    0.0000000000
  50    -1.4153835722    0.2012821309    0.0000000000
  51    -2.1963086176    -1.1425033174    0.0000000000
  52    -1.2163777890    1.2025021070    0.0000000000
  53    -1.2124991836    0.5303746655    0.0000000000
  54    -1.2093204253    1.8709918064    0.0000000000
  55    -1.4139971662    -0.4735438543    0.0000000000
  56    -2.3512640000    -1.5791140000    0.0000000000
  57    -1.6074525569    -0.8075280697    0.0000000000
  58    -1.2214176459    -0.1360874176    0.0000000000
  59    -1.0220441093    0.8703403656    0.0000000000
  60    -1.8022738627    -1.1452379691    0.0000000000
  61    -1.3247978182    2.3575972727    0.0000000000
  62    -1.0232011973    1.5400713159    0.0000000000
  63    -1.0287786127    0.2020415456    0.0000000000
  64    -1.9849768516    -1.4890833293    0.0000000000
  65    -0.8274778214    1.2076964887    0.0000000000
  66    -0.8254913775    0.5336530891    0.0000000000
  67    -1.0235459401    2.2117185168    0.0000000000
  68    -1.2172737017    -0.7951911401    0.0000000000
  69    -1.4229206032    -1.1264942505    0.0000000000
  70    -1.0243637753    -0.4722208757    0.0000000000
  71    -0.8271019719    1.8770296794    0.0000000000
  72    -2.1170870000    -1.8971520000    0.0000000000
  73    -0.8400904156    -0.1389786052    0.0000000000
  74    -0.6326076964    0.8724556631    0.0000000000
  75    -0.9623125455    2.5316481818    0.0000000000
  76    -0.6333357564    1.5391864708    0.0000000000
  77    -0.6398726588    0.1954026574    0.0000000000
  78    -1.5552996408    -1.5626158303    0.0000000000
  79    -1.7766794748    -1.8186128519    0.0000000000
  80    -0.6864002051    2.2395891261    0.0000000000
  81    -0.4397714154    1.2010241886    0.0000000000
  82    -0.4436539298    0.5315867078    0.0000000000
  83    -1.0331735513    -1.1387267727    0.0000000000
  84    -0.8277407506    -0.8083697695    0.0000000000
  85    -0.6366568468    -0.4690415592    0.0000000000
  86    -1.1978477591    -1.4775927707    0.0000000000
  87    -0.4372928719    1.8748416085    0.0000000000
  88    -0.4462828449    -0.1429438518    0.0000000000
  89    -1.8829100000    -2.2151900000    0.0000000000
  90    -0.2429465859    0.8647491975    0.0000000000
  91    -0.5998272727    2.7056990909    0.0000000000
  92    -0.2437030579    1.5364950993    0.0000000000
  93    -1.5253150000    -2.0411394000    0.0000000000
  94    -0.2500641159    0.1932401986    0.0000000000
  95    -0.2683206285    2.2365976790    0.0000000000
  96    -1.1677200000    -1.8670888000    0.0000000000
  97    -0.4537102530    -0.8122876787    0.0000000000
  98    -0.0512164719    1.2039548085    0.0000000000
  99    -0.0538453869    0.5294242489    0.0000000000
  100    -0.6120357591    -1.2193911702    0.0000000000
  101    -0.2510117351    -0.4803228227    0.0000000000
  102    -0.0474843290    1.8726791496    0.0000000000
  103    -0.0570259159    -0.1422032014    0.0000000000
  104    -0.8101250000    -1.6930382000    0.0000000000
  105    0.1423733421    0.8656082993    0.0000000000
  106    0.1455538710    1.5372357496    0.0000000000
  107    -0.2373420000    2.8797500000    0.0000000000
  108    0.1391928131    0.1939808489    0.0000000000
  109    -0.0443038000    2.5443066000    0.0000000000
  110    -0.4525300000    -1.5189876000    0.0000000000
  111    0.1487344000    2.2088632000    0.0000000000
  112    0.3385920710    1.2017923496    0.0000000000
  113    0.3354115421    0.5301648993    0.0000000000
  114    -0.0108725817    -0.8508295362    0.0000000000
  115    0.1382451939    -0.4795821723    0.0000000000
  116    0.3417726000    1.8734198000    0.0000000000
  117    0.3322310131    -0.1414625511    0.0000000000
  118    -0.0949350000    -1.3449370000    0.0000000000
  119    0.5316302710    0.8663489496    0.0000000000
  120    0.5348108000    1.5379764000    0.0000000000
  121    0.1794860000    2.8707050000    0.0000000000
  122    0.5284497421    0.1947214993    0.0000000000
  123    0.3449531290    2.5450472504    0.0000000000
  124    0.3174959368    -0.8103824857    0.0000000000
  125    0.7278490000    1.2025330000    0.0000000000
  126    0.7246684710    0.5309055496    0.0000000000
  127    0.2626600000    -1.1708864000    0.0000000000
  128    0.5771920721    -0.5537785199    0.0000000000
  129    0.7214879421    -0.1407219007    0.0000000000
  130    0.7149869302    2.1254988466    0.0000000000
  131    0.8451173779    1.7517952200    0.0000000000
  132    0.9208872000    0.8670896000    0.0000000000
  133    0.5963140000    2.8616600000    0.0000000000
  134    0.9177066710    0.1954621496    0.0000000000
  135    0.6202550000    -0.9968358000    0.0000000000
  136    0.8789464842    2.4706909382    0.0000000000
  137    0.9167590518    -0.4781008716    0.0000000000
  138    1.1139254000    0.5316462000    0.0000000000
  139    1.1402641853    1.1002385552    0.0000000000
  140    1.1786105311    1.5034685266    0.0000000000
  141    1.1107448710    -0.1399812504    0.0000000000
  142    1.1020508920    2.1531858168    0.0000000000
  143    1.2484178361    0.8183265209    0.0000000000
  144    0.9778500000    -0.8227852000    0.0000000000
  145    1.0131420000    2.8526150000    0.0000000000
  146    1.3069636000    0.1962028000    0.0000000000
  147    1.3157408920    1.8664841502    0.0000000000
  148    1.2660104460    2.4983779084    0.0000000000
  149    1.5031823290    0.5323868504    0.0000000000
  150    1.5638300663    1.0602713991    0.0000000000
  151    1.3354450000    -0.6487346000    0.0000000000
  152    1.5000018000    -0.1392406000    0.0000000000
  153    1.4797004460    2.2116762417    0.0000000000
  154    1.6935890302    1.4907380603    0.0000000000
  155    1.4299700000    2.8435700000    0.0000000000
  156    1.7139866966    0.1863292995    0.0000000000
  157    1.7429897232    1.9001874946    0.0000000000
  158    1.6436600000    2.5568683333    0.0000000000
  159    1.6930400000    -0.4746840000    0.0000000000
  160    1.9054524579    0.6140003891    0.0000000000
  161    1.9491752372    1.0821657666    0.0000000000
  162    1.8573500000    2.2701666667    0.0000000000
  163    1.8968540000    -0.1550752000    0.0000000000
  164    1.9840063155    1.6710178432    0.0000000000
  165    2.1207704460    1.3515712417    0.0000000000
  166    2.1006680000    0.1645336000    0.0000000000
  167    2.0710400000    1.9834650000    0.0000000000
  168    2.2028428760    0.7881734082    0.0000000000
  169    2.3044820000    0.4841424000    0.0000000000
  170    2.2847300000    1.6967633333    0.0000000000
  171    2.3344604460    1.0648695751    0.0000000000
  172    2.5082960000    0.8037512000    0.0000000000
  173    2.4984200000    1.4100616667    0.0000000000
  174    2.7121100000    1.1233600000    0.0000000000
End Nodes


Begin Elements AleCornVelElement
  1  1  159 152 151
  2  1  132 125 119
  3  1  111 109 95
  4  1  146 138 134
  5  1  120 116 106
  6  1  152 146 141
  7  1  125 120 112
  8  1  109 107 91
  9  1  138 132 126
  10  1  116 111 102
  11  1  119 125 112
  12  1  119 112 105
  13  1  134 138 126
  14  1  134 126 122
  15  1  141 146 134
  16  1  141 134 129
  17  1  126 132 119
  18  1  126 119 113
  19  1  105 112 98
  20  1  122 126 113
  21  1  122 113 108
  22  1  129 134 122
  23  1  129 122 117
  24  1  113 119 105
  25  1  113 105 99
  26  1  108 113 99
  27  1  108 99 94
  28  1  122 108 117
  29  1  117 108 103
  30  1  129 117 128
  31  1  94 99 82
  32  1  108 94 103
  33  1  103 94 88
  34  1  117 103 115
  35  1  88 94 77
  36  1  103 88 101
  37  1  95 109 91
  38  1  106 116 102
  39  1  106 102 92
  40  1  92 102 87
  41  1  106 92 98
  42  1  98 92 81
  43  1  106 98 112
  44  1  106 112 120
  45  1  81 92 76
  46  1  98 81 90
  47  1  102 111 95
  48  1  102 95 87
  49  1  87 95 80
  50  1  80 95 91
  51  1  87 80 71
  52  1  152 141 151
  53  1  141 129 137
  54  1  99 105 90
  55  1  90 105 98
  56  1  99 90 82
  57  1  82 90 74
  58  1  76 92 87
  59  1  76 87 71
  60  1  76 71 62
  61  1  90 81 74
  62  1  74 81 65
  63  1  65 81 76
  64  1  74 65 59
  65  1  65 76 62
  66  1  65 62 52
  67  1  52 62 49
  68  1  65 52 59
  69  1  59 52 46
  70  1  46 52 40
  71  1  59 46 53
  72  1  74 59 66
  73  1  82 74 66
  74  1  82 66 77
  75  1  77 66 63
  76  1  82 77 94
  77  1  63 66 53
  78  1  63 53 50
  79  1  53 66 59
  80  1  50 53 41
  81  1  63 50 58
  82  1  77 63 73
  83  1  41 53 46
  84  1  41 46 34
  85  1  34 46 40
  86  1  34 40 30
  87  1  41 34 31
  88  1  30 40 37
  89  1  34 30 25
  90  1  31 34 25
  91  1  31 25 22
  92  1  41 31 38
  93  1  22 25 18
  94  1  31 22 28
  95  1  50 41 38
  96  1  50 38 47
  97  1  47 38 35
  98  1  50 47 58
  99  1  58 47 55
  100  1  55 47 45
  101  1  58 55 70
  102  1  63 58 73
  103  1  73 58 70
  104  1  73 70 85
  105  1  85 70 84
  106  1  73 85 88
  107  1  88 85 101
  108  1  101 85 97
  109  1  97 85 84
  110  1  97 84 100
  111  1  100 84 83
  112  1  97 100 118
  113  1  101 97 114
  114  1  83 84 68
  115  1  100 83 104
  116  1  35 38 28
  117  1  35 28 27
  118  1  27 28 19
  119  1  35 27 36
  120  1  28 38 31
  121  1  47 35 45
  122  1  27 19 20
  123  1  35 36 45
  124  1  45 36 48
  125  1  48 36 39
  126  1  45 48 57
  127  1  19 28 22
  128  1  19 22 15
  129  1  15 22 18
  130  1  15 18 12
  131  1  19 15 13
  132  1  12 18 14
  133  1  15 12 9
  134  1  36 27 29
  135  1  37 40 49
  136  1  37 49 43
  137  1  49 40 52
  138  1  43 49 54
  139  1  37 43 33
  140  1  25 30 21
  141  1  19 13 20
  142  1  20 13 16
  143  1  30 37 26
  144  1  13 15 9
  145  1  13 9 10
  146  1  84 70 68
  147  1  68 70 55
  148  1  68 55 57
  149  1  57 55 45
  150  1  12 14 11
  151  1  43 54 61
  152  1  14 18 21
  153  1  14 21 17
  154  1  21 18 25
  155  1  9 12 8
  156  1  54 49 62
  157  1  54 62 71
  158  1  54 71 67
  159  1  67 71 80
  160  1  54 67 61
  161  1  61 67 75
  162  1  75 67 80
  163  1  39 36 29
  164  1  39 29 32
  165  1  48 39 51
  166  1  57 48 60
  167  1  114 97 118
  168  1  101 114 115
  169  1  101 115 103
  170  1  27 20 29
  171  1  83 68 69
  172  1  128 117 115
  173  1  128 115 124
  174  1  124 115 114
  175  1  128 124 135
  176  1  135 124 127
  177  1  127 124 114
  178  1  137 129 128
  179  1  137 128 144
  180  1  88 77 73
  181  1  21 30 26
  182  1  26 37 33
  183  1  141 137 151
  184  1  8 12 11
  185  1  51 39 42
  186  1  60 48 51
  187  1  69 68 57
  188  1  69 57 60
  189  1  69 60 78
  190  1  78 60 64
  191  1  69 78 86
  192  1  64 60 51
  193  1  78 64 79
  194  1  86 78 96
  195  1  69 86 83
  196  1  83 86 104
  197  1  79 64 72
  198  1  79 72 89
  199  1  78 93 96
  200  1  9 8 7
  201  1  7 8 4
  202  1  9 7 10
  203  1  4 8 6
  204  1  7 4 2
  205  1  2 4 1
  206  1  16 23 20
  207  1  56 72 64
  208  1  56 64 51
  209  1  5 10 7
  210  1  5 7 2
  211  1  32 42 39
  212  1  23 32 29
  213  1  10 16 13
  214  1  42 56 51
  215  1  21 26 17
  216  1  29 20 23
  217  1  89 93 79
  218  1  79 93 78
  219  1  110 118 100
  220  1  144 151 137
  221  1  144 128 135
  222  1  96 104 86
  223  1  118 127 114
  224  1  104 110 100
  225  1  44 33 43
  226  1  44 43 61
  227  1  11 6 8
  228  1  24 17 26
  229  1  24 26 33
  230  1  3 1 4
  231  1  3 4 6
  232  1  91 75 80
  233  1  17 11 14
End Elements

Begin Elements AleCornVelElement
  234  2  174 173 171
  235  2  170 167 164
  236  2  162 158 153
  237  2  173 170 165
  238  2  167 162 157
  239  2  158 155 148
  240  2  159 163 152
  241  2  166 169 160
  242  2  172 174 171
  243  2  172 171 168
  244  2  168 171 161
  245  2  172 168 169
  246  2  169 168 160
  247  2  160 168 161
  248  2  163 166 156
  249  2  171 173 165
  250  2  171 165 161
  251  2  161 165 154
  252  2  154 165 164
  253  2  154 164 157
  254  2  164 165 170
  255  2  157 164 167
  256  2  161 154 150
  257  2  153 158 148
  258  2  153 148 142
  259  2  157 162 153
  260  2  157 153 147
  261  2  153 142 147
  262  2  147 142 131
  263  2  157 147 154
  264  2  147 131 140
  265  2  148 155 145
  266  2  131 142 130
  267  2  142 148 136
  268  2  150 154 140
  269  2  161 150 160
  270  2  107 109 121
  271  2  120 125 131
  272  2  146 152 156
  273  2  111 116 130
  274  2  132 138 143
  275  2  109 111 123
  276  2  125 132 139
  277  2  116 120 131
  278  2  138 146 149
  279  2  166 160 156
  280  2  156 160 149
  281  2  163 156 152
  282  2  140 131 125
  283  2  130 142 136
  284  2  130 136 123
  285  2  136 148 145
  286  2  147 140 154
  287  2  131 130 116
  288  2  143 138 149
  289  2  143 149 150
  290  2  143 150 139
  291  2  143 139 132
  292  2  123 111 130
  293  2  149 146 156
  294  2  109 123 121
  295  2  121 123 133
  296  2  125 139 140
  297  2  140 139 150
  298  2  136 145 133
  299  2  133 123 136
  300  2  149 160 150
End Elements


Begin Conditions PointLoadCondition2D1N
  1  2  1
  2  2  89
End Conditions

Begin Conditions PointLoadCondition2D1N
  3  2  107
  4  2  155
End Conditions

Begin Conditions LineLoadCondition2D2N
  5  1  159 152
  6  1  132 125
  7  1  111 109
  8  1  146 138
  9  1  120 116
  10  1  152 146
  11  1  125 120
  12  1  109 107
  13  1  138 132
  14  1  116 111
  15  2  152 159
  16  2  107 109
  17  2  120 125
  18  2  146 152
  19  2  111 116
  20  2  132 138
  21  2  109 111
  22  2  125 132
  23  2  116 120
  24  2  138 146
End Conditions

Begin Conditions LineLoadCondition2D2N
  25  1  151 159
  26  1  127 135
  27  1  93 96
  28  1  89 93
  29  1  110 118
  30  1  144 151
  31  1  135 144
  32  1  96 104
  33  1  118 127
  34  1  104 110
End Conditions



Begin SubModelPart Body_Part-auto-1
  Begin SubModelPartTables
  End SubModelPartTables
  Begin SubModelPartNodes
    1
    2
    3
    4
    5
    6
    7
    8
    9
    10
    11
    12
    13
    14
    15
    16
    17
    18
    19
    20
    21
    22
    23
    24
    25
    26
    27
    28
    29
    30
    31
    32
    33
    34
    35
    36
    37
    38
    39
    40
    41
    42
    43
    44
    45
    46
    47
    48
    49
    50
    51
    52
    53
    54
    55
    56
    57
    58
    59
    60
    61
    62
    63
    64
    65
    66
    67
    68
    69
    70
    71
    72
    73
    74
    75
    76
    77
    78
    79
    80
    81
    82
    83
    84
    85
    86
    87
    88
    89
    90
    91
    92
    93
    94
    95
    96
    97
    98
    99
    100
    101
    102
    103
    104
    105
    106
    107
    108
    109
    110
    111
    112
    113
    114
    115
    116
    117
    118
    119
    120
    122
    124
    125
    126
    127
    128
    129
    132
    134
    135
    137
    138
    141
    144
    146
    151
    152
    159
  End SubModelPartNodes
  Begin SubModelPartElements
    1
    2
    3
    4
    5
    6
    7
    8
    9
    10
    11
    12
    13
    14
    15
    16
    17
    18
    19
    20
    21
    22
    23
    24
    25
    26
    27
    28
    29
    30
    31
    32
    33
    34
    35
    36
    37
    38
    39
    40
    41
    42
    43
    44
    45
    46
    47
    48
    49
    50
    51
    52
    53
    54
    55
    56
    57
    58
    59
    60
    61
    62
    63
    64
    65
    66
    67
    68
    69
    70
    71
    72
    73
    74
    75
    76
    77
    78
    79
    80
    81
    82
    83
    84
    85
    86
    87
    88
    89
    90
    91
    92
    93
    94
    95
    96
    97
    98
    99
    100
    101
    102
    103
    104
    105
    106
    107
    108
    109
    110
    111
    112
    113
    114
    115
    116
    117
    118
    119
    120
    121
    122
    123
    124
    125
    126
    127
    128
    129
    130
    131
    132
    133
    134
    135
    136
    137
    138
    139
    140
    141
    142
    143
    144
    145
    146
    147
    148
    149
    150
    151
    152
    153
    154
    155
    156
    157
    158
    159
    160
    161
    162
    163
    164
    165
    166
    167
    168
    169
    170
    171
    172
    173
    174
    175
    176
    177
    178
    179
    180
    181
    182
    183
    184
    185
    186
    187
    188
    189
    190
    191
    192
    193
    194
    195
    196
    197
    198
    199
    200
    201
    202
    203
    204
    205
    206
    207
    208
    209
    210
    211
    212
    213
    214
    215
    216
    217
    218
    219
    220
    221
    222
    223
    224
    225
    226
    227
    228
    229
    230
    231
    232
    233
  End SubModelPartElements
  Begin SubModelPartConditions
  End SubModelPartConditions
End SubModelPart

Begin SubModelPart Body_Part-auto-2
  Begin SubModelPartTables
  End SubModelPartTables
  Begin SubModelPartNodes
    107
    109
    111
    116
    120
    121
    123
    125
    130
    131
    132
    133
    136
    138
    139
    140
    142
    143
    145
    146
    147
    148
    149
    150
    152
    153
    154
    155
    156
    157
    158
    159
    160
    161
    162
    163
    164
    165
    166
    167
    168
    169
    170
    171
    172
    173
    174
  End SubModelPartNodes
  Begin SubModelPartElements
    234
    235
    236
    237
    238
    239
    240
    241
    242
    243
    244
    245
    246
    247
    248
    249
    250
    251
    252
    253
    254
    255
    256
    257
    258
    259
    260
    261
    262
    263
    264
    265
    266
    267
    268
    269
    270
    271
    272
    273
    274
    275
    276
    277
    278
    279
    280
    281
    282
    283
    284
    285
    286
    287
    288
    289
    290
    291
    292
    293
    294
    295
    296
    297
    298
    299
    300
  End SubModelPartElements
  Begin SubModelPartConditions
  End SubModelPartConditions
End SubModelPart

Begin SubModelPart Solid_Displacement-auto-1
  Begin SubModelPartTables
  End SubModelPartTables
  Begin SubModelPartNodes
    1
    2
    5
    10
    16
    23
    32
    42
    56
    72
    89
  End SubModelPartNodes
  Begin SubModelPartElements
  End SubModelPartElements
  Begin SubModelPartConditions
  End SubModelPartConditions
End SubModelPart

Begin SubModelPart Force-auto-1
  Begin SubModelPartTables
  End SubModelPartTables
  Begin SubModelPartNodes
    1
    89
  End SubModelPartNodes
  Begin SubModelPartElements
  End SubModelPartElements
  Begin SubModelPartConditions
    1
    2
  End SubModelPartConditions
End SubModelPart

Begin SubModelPart Force-auto-2
  Begin SubModelPartTables
  End SubModelPartTables
  Begin SubModelPartNodes
    107
    155
  End SubModelPartNodes
  Begin SubModelPartElements
  End SubModelPartElements
  Begin SubModelPartConditions
    3
    4
  End SubModelPartConditions
End SubModelPart

Begin SubModelPart Face_Load-auto-1
  Begin SubModelPartTables
  End SubModelPartTables
  Begin SubModelPartNodes
    107
    109
    111
    116
    120
    125
    132
    138
    146
    152
    159
  End SubModelPartNodes
  Begin SubModelPartElements
  End SubModelPartElements
  Begin SubModelPartConditions
    5
    6
    7
    8
    9
    10
    11
    12
    13
    14
    15
    16
    17
    18
    19
    20
    21
    22
    23
    24
  End SubModelPartConditions
End SubModelPart

Begin SubModelPart Normal_Load-auto-1
  Begin SubModelPartTables
  End SubModelPartTables
  Begin SubModelPartNodes
    89
    93
    96
    104
    110
    118
    127
    135
    144
    151
    159
  End SubModelPartNodes
  Begin SubModelPartElements
  End SubModelPartElements
  Begin SubModelPartConditions
    25
    26
    27
    28
    29
    30
    31
    32
    33
    34
  End SubModelPartConditions
End SubModelPart

Begin SubModelPart Body_Acceleration-auto-1
  Begin SubModelPartTables
  End SubModelPartTables
  Begin SubModelPartNodes
    1
    2
    3
    4
    5
    6
    7
    8
    9
    10
    11
    12
    13
    14
    15
    16
    17
    18
    19
    20
    21
    22
    23
    24
    25
    26
    27
    28
    29
    30
    31
    32
    33
    34
    35
    36
    37
    38
    39
    40
    41
    42
    43
    44
    45
    46
    47
    48
    49
    50
    51
    52
    53
    54
    55
    56
    57
    58
    59
    60
    61
    62
    63
    64
    65
    66
    67
    68
    69
    70
    71
    72
    73
    74
    75
    76
    77
    78
    79
    80
    81
    82
    83
    84
    85
    86
    87
    88
    89
    90
    91
    92
    93
    94
    95
    96
    97
    98
    99
    100
    101
    102
    103
    104
    105
    106
    107
    108
    109
    110
    111
    112
    113
    114
    115
    116
    117
    118
    119
    120
    122
    124
    125
    126
    127
    128
    129
    132
    134
    135
    137
    138
    141
    144
    146
    151
    152
    159
  End SubModelPartNodes
  Begin SubModelPartElements
  End SubModelPartElements
  Begin SubModelPartConditions
  End SubModelPartConditions
End SubModelPart

